# numerical-methods-II

./: .gitignore  CMakeLists.txt  README.md  dune-project  numerical_methods.opam
T1/: CMakeLists.txt  main.cpp
T1.2/: t1.ipynb
T1/function/: CMakeLists.txt  function.cpp  function.h
T10/: dune  main.ml
T11/: dune  main.ml
T12/: dune
T12.1/: dune  main.ml
T12.2/: dune  main.ml
T12.SVD/: dune  main.ml
T13/: dune  main.ml
T13-14/: PC.csv  RK.csv  dune  main.ml  plot.py
T14/: dune  main.ml
T14/docs/: Preditor-corretor de quarta ordem.md
T15/: dune  main.ml
T2/: t1.ipynb  temp.txt
T3/: CMakeLists.txt  main.cpp
T3/integral/: CMakeLists.txt
T3/integral/include/: newton_cotes.h
T3/integral/src/: newton_cotes.cpp
T5/: CMakeLists.txt  main.cpp
T6/: CMakeLists.txt  main.cpp
T7/: CMakeLists.txt  main.cpp
lib/: dune  linear.ml  linear.mli  pvc.ml  pvc.mli  pvi.ml  pvi.mli  svd.ml  svd.mli
test/: dune  test_methods.ml
utils/: CMakeLists.txt
utils/function/: CMakeLists.txt  function.cpp
utils/function/include/: abstract_gauss_integration.h  function.h  gauss_legendre.h  newton_cotes.h  singularity_integration.h
utils/function/src/: abstract_gauss_integration.cpp  function.cpp  gauss_legendre.cpp  newton_cotes.cpp  singularity_integration.cpp
